--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HMSLIMA</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/script.js" defer></script>
+    <link rel="stylesheet" href="resources/css/styles.css">
+    <script src="resources/js/script.js" defer></script>
 </head>
 
 <body onload="start()">
@@ -20,7 +20,7 @@
                         🌜︎
                     </a>
                     <a class="generalMenuButton hamburgerMenu" href="#">
-                        <img src="assets/img/icons/hmenu.svg" class="hamburgerMenuBar">
+                        <img src="resources/img/icons/hmenu.svg" class="hamburgerMenuBar">
                     </a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
 
             <br>
             <div class="imgTextIntroduction">
-                <img src="assets/img/photos/hmslima.jpg" class="mainPhoto">
+                <img src="resources/img/photos/hmslima.jpg" class="mainPhoto">
                 <div id="write">
                     Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about
                     software development.
@@ -75,37 +75,51 @@
                     <div class="cardBodyStacks">
                         <div class="stack">
                             JAVA
-                            <img src="assets/img/stacks/java.svg" alt="Java">
+                            <img class="svgStack" src="resources/img/stacks/java.svg" alt="Java">
                         </div>
                         <div class="stack">
                             JDBC
-                            <img src="assets/img/stacks/jdbc.svg" alt="JDBC">
+                            <img class="svgStack" src="resources/img/stacks/jdbc.svg" alt="JDBC">
                         </div>
                         <div class="stack">
                             Hibernate
-                            <img src="assets/img/stacks/hibernate.svg" alt="Hibernate">
+                            <img class="svgStack" src="resources/img/stacks/hibernate.svg" alt="Hibernate">
                         </div>
                         <div class="stack">
                             Spring
-                            <img src="assets/img/stacks/spring.svg" alt="Spring">
+                            <img class="svgStack" src="resources/img/stacks/spring.svg" alt="Spring">
                         </div>
                     </div>
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">More Back-end</div>
+                    <div class="cardTitleStacks">Other Languages</div>
+                    <div class="cardBodyStacks">
+                        <div class="stack">
+                            C++
+                            <img class="svgStack" src="resources/img/stacks/cpp.svg" alt="C++">
+                        </div>
+                        <div class="stack">
+                            JavaScript
+                            <img class="svgStack" src="resources/img/stacks/javascript.svg" alt="JavaScript">
+                        </div>
+                        <div class="stack">
+                            Python
+                            <img class="svgStack" src="resources/img/stacks/python.svg" alt="C++">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cardStacks">
+                    <div class="cardTitleStacks">Back-end Technologies</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             Node.js
-                            <img src="assets/img/stacks/nodejs.svg" alt="Node.js">
+                            <img class="svgStack" src="resources/img/stacks/nodejs.svg" alt="Node.js">
                         </div>
                         <div class="stack">
-                            C++
-                            <img src="assets/img/stacks/cpp.svg" alt="C++">
-                        </div>
-                        <div class="stack">
-                            SQL
-                            <img src="assets/img/stacks/sql.svg" alt="SQL">
+                            MySQL
+                            <img class="svgStack" src="resources/img/stacks/mysql.svg" alt="SQL">
                         </div>
                     </div>
                 </div>
@@ -115,41 +129,51 @@
                     <div class="cardBodyStacks">
                         <div class="stack">
                             HTML
-                            <img src="assets/img/stacks/html.svg" alt="HTML">
+                            <img class="svgStack" src="resources/img/stacks/html.svg" alt="HTML">
                         </div>
                         <div class="stack">
                             CSS
-                            <img src="assets/img/stacks/css.svg" alt="CSS">
+                            <img class="svgStack" src="resources/img/stacks/css.svg" alt="CSS">
                         </div>
                         <div class="stack">
                             JavaScript
-                            <img src="assets/img/stacks/javascript.svg" alt="JavaScript">
+                            <img class="svgStack" src="resources/img/stacks/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="stack">
                             Angular
-                            <img src="assets/img/stacks/angular.svg" alt="Angular">
+                            <img class="svgStack" src="resources/img/stacks/angular.svg" alt="Angular">
                         </div>
                     </div>
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Other</div>
+                    <div class="cardTitleStacks">Tools</div>
+                    <div class="cardBodyStacks">
+                        <div class="stack">
+                            Git
+                            <img class="svgStack" src="resources/img/stacks/git.svg" alt="Git">
+                        </div>
+                        <div class="stack">
+                            Maven
+                            <img class="svgStack" src="resources/img/stacks/maven.svg" alt="Maven">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cardStacks">
+                    <div class="cardTitleStacks">Concepts</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             Design Patterns
-                            <img src="assets/img/stacks/designpatterns.svg" alt="Design Patterns">
-                        </div>
-                        <div class="stack">
-                            Git
-                            <img src="assets/img/stacks/git.svg" alt="Git">
+                            <img class="svgStack" src="resources/img/stacks/designpatterns.svg" alt="Design Patterns">
                         </div>
                         <div class="stack">
                             MVC
-                            <img src="assets/img/stacks/MVC.svg" alt="MVC">
+                            <img class="svgStack" src="resources/img/stacks/MVC.svg" alt="MVC">
                         </div>
                         <div class="stack">
                             Scrum
-                            <img src="assets/img/stacks/scrum.svg" alt="Scrum">
+                            <img class="svgStack" src="resources/img/stacks/scrum.svg" alt="Scrum">
                         </div>
                     </div>
                 </div>
@@ -163,16 +187,16 @@
             <div class="nav_space" id="contact"></div>
             <h1>Contact</h1>
 
-            <p><img src="assets/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com"
+            <p><img src="resources/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com"
                     target="_blank">E-mail</a></p>
 
-            <p><img src="assets/img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/"
+            <p><img src="resources/img/icons/github.svg" class="imgText"> <a href="https://github.com/hmslima/"
                     target="_blank">GitHub</a></p>
 
-            <p><img src="assets/img/icons/linkedin.svg" class="imgText"> <a
+            <p><img src="resources/img/icons/linkedin.svg" class="imgText"> <a
                     href="https://www.linkedin.com/in/henrique-matheus-da-silva-lima/" target="_blank">LinkedIn</a></p>
 
-            <p><img src="assets/img/icons/twitter.svg" class="imgText"> <a href="https://twitter.com/hmslima_"
+            <p><img src="resources/img/icons/twitter.svg" class="imgText"> <a href="https://twitter.com/hmslima_"
                     target="_blank">Twitter</a></p>
 
         </div>
