I've added Bootstrat to the list of my stacks

--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                             <img class="svgStack" src="resources/img/stacks/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="stack">
+                            Bootstrap
+                            <img class="svgStack" src="resources/img/stacks/bootstrap.svg" alt="Bootstrap">
+                        </div>
+                        <div class="stack">
                             Angular
                             <img class="svgStack" src="resources/img/stacks/angular.svg" alt="Angular">
                         </div>
