--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                             <img class="svgStack" src="resources/img/stacks/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="stack">
+                            Typescript
+                            <img class="svgStack" src="resources/img/stacks/typescript.svg" alt="Typescript">
+                        </div>
+                        <div class="stack">
                             Bootstrap
                             <img class="svgStack" src="resources/img/stacks/bootstrap.svg" alt="Bootstrap">
                         </div>
@@ -202,6 +206,11 @@
 
             <p><img src="resources/img/icons/twitter.svg" class="imgText"> <a href="https://twitter.com/hmslima_"
                     target="_blank">Twitter</a></p>
+
+            <br>
+
+            <p><img src="resources/img/icons/curriculum.svg" class="imgText"> <a href="download/curriculo.pdf"
+                    target="_blank">Resume <i>(in Portuguese)</i></a></p>
 
         </div>
     </section>
