--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <a class="navLink menuItemLink" href="#my_stacks">My Stacks</a>
             <a class="navLink menuItemLink" href="#contact">Contact</a>
             <a class="navLink menuItemLink" href="#programmingprojects">Programing projects</a>
-            <a class="navLink menuItemLink" href="#miscellaneous">Miscellaneous</a>
         </div>
     </div>
 
@@ -218,41 +217,38 @@
     <section class="new_section">
         <div class="nav_space" id="programmingprojects"></div>
         <div class="container">
-            <h1>My Principal Programming Projects</h1>
+            <h1>My Main Programming Projects</h1>
 
             <div class="cardContainer">
                 <div class="card">
                     <div class="cardTitle">
-                        <h3>JS-Dictionar</h3>
+                        <h3>Filmes API</h3>
                     </div>
                     <div class="cardBody">
-                        <p>A powerful dynamic dictionary contained in a single HTML file.</p>
+                        <p>A simple API that shows some of my favorite movies in JSON format. You can also see individual movie data by using their respective IDs</p>
                         <br>
-                        <a href="https://github.com/hmslima/JS-Dictionar" target="_blank">GitHub page</a>
+                        <a class="linkWithWhiteBg" href="https://hmslimafilmesapi.herokuapp.com/filmes" target="_blank">See API</a>
+                        <br><br>
+                        <a class="linkWithWhiteBg" href="https://github.com/hmslima/filmesapi" target="_blank">GitHub page</a>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="cardTitle">
-                        <h3>JS-Sambahsapronunciator</h3>
+                        <h3>JS-Dictionar</h3>
                     </div>
                     <div class="cardBody">
-                        <p>A pronunciator of words to IPA and SPT for Sambahsa Mundialect.</p>
+                        <p>A powerful dynamic dictionary contained in a single HTML file, you can use easily adapt it to your own dictionary. You can search in both languages, and the specific words are marked.</p>
                         <br>
-                        <a href="https://github.com/hmslima/JS-Sambahsapronunciator" target="_blank">GitHub page</a>
+                        <a class="linkWithWhiteBg" href="https://hmslima.github.io/JS-Dictionar/" target="_blank">Example</a>
+                        <br><br>
+                        <a class="linkWithWhiteBg" href="https://github.com/hmslima/JS-Dictionar" target="_blank">GitHub page</a>
                     </div>
                 </div>
             </div>
 
             <p>If you want to see more projects, see my <a href="https://github.com/hmslima/"
                     target="_blank">GitHub</a>.</p>
-        </div>
-    </section>
-
-    <section class="new_section">
-        <div id="miscellaneous"></div>
-        <div class="container">
-            <h1>Miscellaneous</h1>
         </div>
     </section>
 
