--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Back-end Technologies</div>
+                    <div class="cardTitleStacks">More Back-end Technologies</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             Node.js
@@ -139,16 +139,8 @@
                             <img class="svgStack" src="resources/img/stacks/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="stack">
-                            Typescript
-                            <img class="svgStack" src="resources/img/stacks/typescript.svg" alt="Typescript">
-                        </div>
-                        <div class="stack">
                             Bootstrap
                             <img class="svgStack" src="resources/img/stacks/bootstrap.svg" alt="Bootstrap">
-                        </div>
-                        <div class="stack">
-                            Angular
-                            <img class="svgStack" src="resources/img/stacks/angular.svg" alt="Angular">
                         </div>
                     </div>
                 </div>
