--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body onload="start()">
+
+    <!-- Load the dark background image, thus, when the user change to dark mode, (s)he doesn't see the loading -->
+    <div style="display: none;"><img src="resources/img/background/bg-dark.jpg"></div>
+
     <nav>
         <div class="container">
             <div class="nav-flex">
