--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
                             Maven
                             <img class="svgStack" src="resources/img/stacks/maven.svg" alt="Maven">
                         </div>
+                        <div class="stack">
+                            Postman
+                            <img class="svgStack" src="resources/img/stacks/postman.svg" alt="Postman">
+                        </div>
                     </div>
                 </div>
 
