--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                             Spring
                             <img class="svgStack" src="resources/img/stacks/spring.svg" alt="Spring">
                         </div>
+                        <div class="stack">
+                            JUnit
+                            <img class="svgStack" src="resources/img/stacks/junit.svg" alt="JUnit">
+                        </div>
                     </div>
                 </div>
 
