--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                             MySQL
                             <img class="svgStack" src="resources/img/stacks/mysql.svg" alt="SQL">
                         </div>
+                        <div class="stack">
+                            PostgreSQL
+                            <img class="svgStack" src="resources/img/stacks/postgresql.svg" alt="PostgreSQL">
+                        </div>
                     </div>
                 </div>
 
