--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                     <div class="cardTitleStacks">Other Languages</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
+                            C
+                            <img class="svgStack" src="resources/img/stacks/c.svg" alt="C">
+                        </div>
+                        <div class="stack">
                             C++
                             <img class="svgStack" src="resources/img/stacks/cpp.svg" alt="C++">
                         </div>
