--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
                             Bootstrap
                             <img class="svgStack" src="resources/img/stacks/bootstrap.svg" alt="Bootstrap">
                         </div>
+                        <div class="stack">
+                            Angular
+                            <img class="svgStack" src="resources/img/stacks/angular.svg" alt="Angular">
+                        </div>
                     </div>
                 </div>
 
@@ -226,14 +230,14 @@
             <div class="cardContainer">
                 <div class="card">
                     <div class="cardTitle">
-                        <h3>Filmes API</h3>
+                        <h3>Mural de recados</h3>
                     </div>
                     <div class="cardBody">
-                        <p>A simple API that shows some of my favorite movies in JSON format. You can also see individual movie data by using their respective IDs</p>
+                        <p>A simple Message Board made with Java and Spring Boot in the back-end, and Angular in the front-end</p>
                         <br>
-                        <a class="linkWithWhiteBg" href="https://hmslimafilmesapi.herokuapp.com/filmes" target="_blank">See API</a>
+                        <a class="linkWithWhiteBg" href="https://mural-deploy.vercel.app/" target="_blank">See project</a>
                         <br><br>
-                        <a class="linkWithWhiteBg" href="https://github.com/hmslima/filmesapi" target="_blank">GitHub page</a>
+                        <a class="linkWithWhiteBg" href="https://github.com/hmslima/mural_de_recados" target="_blank">GitHub page</a>
                     </div>
                 </div>
 
