--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                             JUnit
                             <img class="svgStack" src="resources/img/stacks/junit.svg" alt="JUnit">
                         </div>
+                        <div class="stack">
+                            Microservices
+                            <img class="svgStack" src="resources/img/stacks/microservices.svg" alt="Microservices">
+                        </div>
                     </div>
                 </div>
 
@@ -107,12 +111,12 @@
                             <img class="svgStack" src="resources/img/stacks/c.svg" alt="C">
                         </div>
                         <div class="stack">
-                            C++
-                            <img class="svgStack" src="resources/img/stacks/cpp.svg" alt="C++">
-                        </div>
-                        <div class="stack">
                             JavaScript
                             <img class="svgStack" src="resources/img/stacks/javascript.svg" alt="JavaScript">
+                        </div>
+                        <div class="stack">
+                            TypeScript
+                            <img class="svgStack" src="resources/img/stacks/typescript.svg" alt="TypeScript">
                         </div>
                         <div class="stack">
                             Python
@@ -125,12 +129,20 @@
                     <div class="cardTitleStacks">More Back-end Technologies</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
+                            Node.js
+                            <img class="svgStack" src="resources/img/stacks/nodejs.svg" alt="Node.js">
+                        </div>
+                        <div class="stack">
                             MySQL
                             <img class="svgStack" src="resources/img/stacks/mysql.svg" alt="SQL">
                         </div>
                         <div class="stack">
                             PostgreSQL
                             <img class="svgStack" src="resources/img/stacks/postgresql.svg" alt="PostgreSQL">
+                        </div>
+                        <div class="stack">
+                            MongoDB
+                            <img class="svgStack" src="resources/img/stacks/mongodb.svg" alt="MongoDB">
                         </div>
                     </div>
                 </div>
