--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
     <div class="nav_space"></div>
     <div class="container container-right">
         <div id="menu">
-            <a class="navLink menuItemLink" href="#my_stacks">My Stacks</a>
-            <a class="navLink menuItemLink" href="#contact">Contact</a>
-            <a class="navLink menuItemLink" href="#programmingprojects">Programing projects</a>
         </div>
     </div>
 
@@ -57,8 +54,6 @@
             <div class="imgTextIntroduction">
                 <img src="resources/img/photos/hmslima.jpg" class="mainPhoto">
                 <div id="write">
-                    Welcome to the website of Henrique Matheus da Silva Lima, a Brazilian programmer passionate about
-                    software development.
                 </div>
             </div>
 
@@ -69,12 +64,12 @@
 
 
             <div class="nav_space" id="my_stacks"></div>
-            <h1>My stacks</h1>
+            <h1 id="my_stacks_">My Stacks</h1>
 
             <div class="cardContainer">
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Java Development</div>
+                    <div class="cardTitleStacks" id="java_development_">Java Development</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             JAVA
@@ -97,14 +92,14 @@
                             <img class="svgStack" src="resources/img/stacks/junit.svg" alt="JUnit">
                         </div>
                         <div class="stack">
-                            Microservices
+                            <span id="microservices_">Microservices</span>
                             <img class="svgStack" src="resources/img/stacks/microservices.svg" alt="Microservices">
                         </div>
                     </div>
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Other Languages</div>
+                    <div class="cardTitleStacks" id="other_languages_">Other Languages</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             C
@@ -126,7 +121,7 @@
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">More Back-end Technologies</div>
+                    <div class="cardTitleStacks" id="more_backend_technologies_">More Back-end Technologies</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             Node.js
@@ -174,7 +169,7 @@
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Tools</div>
+                    <div class="cardTitleStacks" id="tools_">Tools</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             Git
@@ -192,7 +187,7 @@
                 </div>
 
                 <div class="cardStacks">
-                    <div class="cardTitleStacks">Concepts</div>
+                    <div class="cardTitleStacks" id="concepts_">Concepts</div>
                     <div class="cardBodyStacks">
                         <div class="stack">
                             MVC
@@ -212,7 +207,7 @@
 
 
             <div class="nav_space" id="contact"></div>
-            <h1>Contact</h1>
+            <h1 id="contact_">Contact</h1>
 
             <p><img src="resources/img/icons/email.svg" class="imgText"> <a href="mailto:hmslima1992@gmail.com"
                     target="_blank">E-mail</a></p>
@@ -229,7 +224,7 @@
             <br>
 
             <p><img src="resources/img/icons/curriculum.svg" class="imgText"> <a href="download/curriculo.pdf"
-                    target="_blank">Resume <i>(in Portuguese)</i></a></p>
+                    target="_blank" id="resume_">Resume <i>(in Portuguese)</i></a></p>
 
         </div>
     </section>
@@ -237,7 +232,7 @@
     <section class="new_section">
         <div class="nav_space" id="programmingprojects"></div>
         <div class="container">
-            <h1>My Main Programming Projects</h1>
+            <h1 id="programmingprojects_">My Main Programming Projects</h1>
 
             <div class="cardContainer">
                 <div class="card">
